# paoo

./: CMakeLists.txt  README.md
include/: Family.h  House.h  Mansion.h
src/: Family.cpp  House.cpp  Mansion.cpp  main.cpp
